# models/user.go
@@ -6,8 +6,8 @@ import (
 
 type User struct {
 	gorm.Model
-	NationalID string `json:"national_id" binding:"required, len=10"`
+	NationalID string `json:"national_id"  validate:"required,len=10"`
 	FirstName  string `json:"first_name"`
 	LastName   string `json:"last_name"`
-	Status     bool   `json:"status" defaul:"1"`
+	Status     int    `json:"status" default:"1"`
 }
